[project]
name = "weather-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[tool.poe.tasks]
build-docker = "docker build -t cevaude/weather-mcp:0.1.0 ."

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
]
